--- a/Moongazing.GuidShorter/Moongazing.GuidShorter.csproj
+++ b/Moongazing.GuidShorter/Moongazing.GuidShorter.csproj
@@ -2,8 +2,16 @@
 
   <PropertyGroup>
     <TargetFramework>net9.0</TargetFramework>
-    <ImplicitUsings>enable</ImplicitUsings>
-    <Nullable>enable</Nullable>
+    <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
+    <Version>1.0.0</Version>
+    <Authors>Moongazing</Authors>
+    <PackageId>GuidShorter</PackageId>
+    <Description>A library to generate shorter and user-friendly GUIDs.</Description>
+    <RepositoryUrl>https://github.com/Moongazing/GuidShorter</RepositoryUrl>
+    <PackageTags>Guid, Shorter, Utilities</PackageTags>
+    <PackageLicenseFile>LICENSE.txt</PackageLicenseFile>
+    <PackageReadmeFile>README.md</PackageReadmeFile>
+
   </PropertyGroup>
 
 </Project>
