--- a/Moongazing.GuidShorter/Moongazing.GuidShorter.csproj
+++ b/Moongazing.GuidShorter/Moongazing.GuidShorter.csproj
@@ -14,4 +14,8 @@
 
   </PropertyGroup>
 
+  <ItemGroup>
+    <None Include="LICENSE.txt" Pack="true" PackagePath="/" />
+  </ItemGroup>
+
 </Project>
