--- a/Moongazing.GuidShorter/Moongazing.GuidShorter.csproj
+++ b/Moongazing.GuidShorter/Moongazing.GuidShorter.csproj
@@ -17,5 +17,9 @@
   <ItemGroup>
     <None Include="LICENSE.txt" Pack="true" PackagePath="/" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="README.md" Pack="true" PackagePath="/" />
+  </ItemGroup>
+
 
 </Project>
